refactor: 와인 검색 시 wineType을 중간 테이블 기반으로 조회하도록 수정
- 기존에는 wine.wineType 필드를 직접 비교했지만,
  wineType 또한 Category를 통해 관리되므로 구조에 맞게 수정
- Country, Region, WineType 모두 Category를 통해 필터링
- 검색 키워드에서도 wineType, category.name 포함되도록 개선